--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <link rel="icon" type="image" href="./src/assets/images/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>E-commerce (React)</title>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
   </head>
   <body>
     <div id="root"></div>
